feat(cssvars): change css vars with js

--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,6 +22,22 @@
 
   <style>
 
+    :root {
+      --spacing: 10px;
+      --blur: 10px;
+      --base: #ffc600;
+    }
+
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
+    }
+
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -45,7 +61,18 @@
   </style>
 
   <script>
-  </script>
+    const controls = document.querySelectorAll('.controls input');
+
+    function handleUpdate(e) {
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, `${this.value}${suffix}`);
+    }
+
+    controls.forEach(control => {
+      control.addEventListener('change', handleUpdate);
+      control.addEventListener('mousemove', handleUpdate);
+    });
+    </script>
 
 </body>
 </html>
